--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,21 @@ dependencies = [
     "pytest",
     "pytest-cov",
     "mkdocs",
+    "bumpver",
+]
+
+[tool.bumpver]
+current_version = "v0.2.3"
+version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
+commit_message = "Bump version {old_version} -> {new_version}."
+commit = true
+tag = true
+push = true
+
+[tool.bumpver.file_patterns]
+"mypackage/__init__.py" = [
+    '__version__ = "{pep440_version}"',
+]
+"pyproject.toml" = [
+    'version = "{pep440_version}"',
 ]
