--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "mypackage"
+name = "mypackage-empatutorial-javoba"
 version = "0.3.0"
 license = {file = "LICENSE"}
 description = "My first package"
